# spin-builder

./: .gitignore  install.sh  output.toml  package-lock.json  package.json  spin-pluginify.toml  tailwind.config.js  tsconfig.json
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  output.toml  spin.toml  tauri.conf.json
src-tauri/src/: dummy_http_trigger.wasm  main.rs
src/components/: Graph.vue  Header.vue  NotificationComponent.vue  Sidebar.vue
src/components/edges/: CustomEdge.vue
src/components/nodes/: ComponentNode.vue  StoreNode.vue  TriggerNode.vue
src/components/utils/: AppDetails.vue  Modal.vue  Tabs.vue  Toast.vue  Toggle.vue  Tooltip.vue
src/graph-utils/: constants.ts  edgeManipulation.ts  index.ts  manifestToGraph.ts  validateManifest.ts
src/store/: actions.ts  getters.ts  index.ts  mutations.ts  state.ts  vuex.d.ts
src/types/: index.d.ts
src/views/: AddNodeModal.vue
src/views/addNodeModal/: AddNodeModal.vue  AddTrigger.vue  UploadNewFile.vue
src/views/modals/addNodeModal/: AddNodeModal.vue  AddTrigger.vue  UploadNewFile.vue
src/views/modals/addSpinComponent/: AddSpinComponent.vue
